examples/taint-checking/taint_checking.out
# To run this sample, navigate to the directory that contains the
# `.bal` file, and execute the `ballerina run` command.
$ ballerina run taint_checking.bal
error: .::taint_checking.bal:64:40: tainted value passed to sensitive parameter 'secureParameter'
error: .::taint_checking.bal:32:12: tainted value passed to sensitive parameter 'sqlQuery'
error: .::taint_checking.bal:43:32: tainted value passed to sensitive parameter 'secureParameter'
error: .::taint_checking.bal:69:40: tainted value passed to sensitive parameter 'secureParameter'
